# tercpp

./: CHANGES  CMakeLists.txt  Copyright  INSTALL  README.md  README.txt  cbuild.sh
doc/: index.html
examples/: hyp.txt  model.bin.ep7-nc10.fr.vocab  newstest2014-fren-ref.en  newstest2014-ref.en-fr  newstest2014-ref.en-fr.100  newstest2014.kit.3112.fr-en  newstest2014.onlineC.0.en-fr  newstest2014.onlineC.0.en-fr.100  ref.txt  testhyp.txt  testref.txt
src/: CMakeLists.txt  alignmentStruct.cpp  alignmentStruct.h  bestShiftStruct.cpp  bestShiftStruct.h  distance.cpp  distance.h  documentStructure.cpp  documentStructure.h  hashMap.cpp  hashMap.h  hashMapInfos.cpp  hashMapInfos.h  hashMapStringInfos.cpp  hashMapStringInfos.h  infosHasher.cpp  infosHasher.h  multiEvaluation.cpp  multiEvaluation.h  multiTxtDocument.cpp  multiTxtDocument.h  segmentStructure.cpp  segmentStructure.h  sgmlDocument.cpp  sgmlDocument.h  stringHasher.cpp  stringHasher.h  stringInfosHasher.cpp  stringInfosHasher.h  terAlignment.cpp  terAlignment.h  terEvaluation.h  terShift.cpp  terShift.h  tercalc.cpp  tercalc.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  (+8 more)
test/: CMakeLists.txt  main.cpp
